<?xml version="1.0" encoding="utf-8"?>

<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/menu_horizontal_margin"
    android:layout_marginEnd="@dimen/menu_horizontal_margin"
    android:layout_marginBottom="@dimen/menu_bottom_margin"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_tab_tray"
            app:behavior_hideable="true"
            app:behavior_peekHeight="@dimen/bottom_sheet_browser_menu_height"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:id="@+id/menu_screenshots"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:gravity="center_horizontal"
                    android:minHeight="71dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/menu_bookmark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_screenshots"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/menu_my_shots_states" />

                    <TextView
                        style="@style/MenuButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:gravity="top|center_horizontal"
                        android:text="@string/label_menu_my_shots" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/menu_bookmark"
                    style="@style/MenuButtonText"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:drawablePadding="10dp"
                    android:gravity="top|center_horizontal"
                    android:paddingTop="10dp"
                    android:text="@string/label_menu_bookmark"
                    app:drawableTopCompat="@drawable/ic_bookmarks"
                    app:layout_constraintEnd_toStartOf="@id/menu_history"
                    app:layout_constraintStart_toEndOf="@id/menu_screenshots"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/menu_history"
                    style="@style/MenuButtonText"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:drawablePadding="10dp"
                    android:gravity="top|center_horizontal"
                    android:paddingTop="10dp"
                    android:text="@string/label_menu_history"
                    app:drawableTopCompat="@drawable/menu_history"
                    app:layout_constraintEnd_toStartOf="@id/menu_download"
                    app:layout_constraintStart_toEndOf="@id/menu_bookmark"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/menu_download"

                    style="@style/MenuButtonText"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:drawablePadding="10dp"
                    android:gravity="top|center_horizontal"
                    android:paddingTop="10dp"
                    android:text="@string/label_menu_download"
                    app:drawableTopCompat="@drawable/menu_download"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/menu_history"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/first_barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="menu_screenshots, menu_bookmark, menu_history, menu_download" />

                <View
                    android:id="@+id/gutter_first"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="7dp"
                    android:background="@color/paletteLightGreyA100"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/first_barrier" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/menu_night_mode"
                    style="@style/BottomSheetRowMenuItemTextStyle"
                    android:drawableStart="@drawable/icon_night_mode"
                    android:text="@string/label_menu_night_mode"
                    app:layout_constraintEnd_toStartOf="@id/menu_night_mode_gutter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gutter_first" />

                <View
                    android:id="@+id/menu_night_mode_gutter"
                    android:layout_width="1dp"
                    android:layout_height="24dp"
                    android:background="@color/paletteLightGreyA100"
                    app:layout_constraintBottom_toBottomOf="@id/menu_night_mode"
                    app:layout_constraintStart_toEndOf="@id/menu_night_mode"
                    app:layout_constraintTop_toTopOf="@id/menu_night_mode" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/night_mode_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="@id/menu_night_mode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/menu_night_mode_gutter"
                    app:layout_constraintTop_toTopOf="@id/menu_night_mode" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/menu_turbo_mode"
                    style="@style/BottomSheetRowMenuItemTextStyle"
                    android:drawableStart="@drawable/menu_speedmode"
                    android:text="@string/label_menu_turbo_mode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/menu_night_mode" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/turbo_mode_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="@id/menu_turbo_mode"
                    app:layout_constraintEnd_toEndOf="@id/menu_turbo_mode"
                    app:layout_constraintTop_toTopOf="@id/menu_turbo_mode" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/menu_block_img"
                    style="@style/BottomSheetRowMenuItemTextStyle"
                    android:drawableStart="@drawable/menu_blockimg"
                    android:text="@string/label_menu_block_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/menu_turbo_mode" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/block_images_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="@id/menu_block_img"
                    app:layout_constraintEnd_toEndOf="@id/menu_block_img"
                    app:layout_constraintTop_toTopOf="@id/menu_block_img" />

                <View
                    android:id="@+id/gutter_second"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@color/paletteLightGreyA100"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/menu_block_img" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/menu_find_in_page"
                    style="@style/BottomSheetRowMenuItemTextStyle"
                    android:drawableStart="@drawable/action_search"
                    android:text="@string/label_menu_find_in_page"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gutter_second" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/menu_pin_site"
                    style="@style/BottomSheetRowMenuItemTextStyle"
                    android:drawableStart="@drawable/ic_pin"
                    android:text="@string/pin_site"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/menu_find_in_page" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/menu_pin_shortcut"
                    style="@style/BottomSheetRowMenuItemTextStyle"
                    android:drawableStart="@drawable/action_add_to_home"
                    android:text="@string/label_menu_add_to_home_screen"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/menu_pin_site" />

                <View
                    android:id="@+id/gutter_third"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@color/paletteLightGreyA100"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/menu_pin_shortcut" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/menu_preferences"
                    style="@style/BottomSheetRowMenuItemTextStyle"
                    android:drawableStart="@drawable/menu_settings"
                    android:text="@string/label_menu_settings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gutter_third" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="22dp"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="@id/menu_preferences"
                    app:layout_constraintEnd_toEndOf="@id/menu_preferences"
                    app:layout_constraintTop_toTopOf="@id/menu_preferences" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/menu_delete"
                    style="@style/BottomSheetRowMenuItemTextStyle"
                    android:drawableStart="@drawable/menu_delete"
                    android:text="@string/label_menu_clear_cache"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/menu_preferences" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/menu_exit"
                    style="@style/BottomSheetRowMenuItemTextStyle"
                    android:drawableStart="@drawable/menu_exit"
                    android:text="@string/label_menu_exit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/menu_delete" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <org.mozilla.rocket.content.view.BottomBar
        android:id="@+id/menu_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorMenuBackground"
        android:paddingStart="21dp"
        android:paddingEnd="21dp"
        app:dividerColor="@color/paletteLightGreyA100"
        tools:background="#F0F" />

</LinearLayout>
